--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,9 @@
 .navbar img {
-    height: 40px;
+    height: 50px;
     width: auto;
+    padding-bottom: 20px;
+}
+
+.title{
+    text-align: center;
 }
