--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,7 +4,36 @@
     padding-bottom: 20px;
 }
 
-
 .title {
     text-align: center;
+}
+
+footer {
+    background: url('../img/header9bis.png') no-repeat;
+    color: #a1a2ad;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+footer a {
+    color: #a1a2ad;
+}
+
+footer a:hover {
+    color: white;
+}
+
+footer h3 {
+    margin-bottom: 10px;
+    color: #ffffff;
+}
+
+footer img {
+    margin-top: -7px;
+    float: left;
+    width: 80px;
+    height: auto;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
